--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -37,7 +37,7 @@
 
   <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
-    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 
 <!--  export eAjanlatSzerkesztesModeMode {
