--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
@@ -5,6 +5,6 @@
   </div>
   <div class="editform-okcancel">
     <button class="editform-okbutton" (click)="doOk()">Ok</button>
-    <button class="editform-cancelbutton" (click)="doCancel()">Mégsem</button>
+    <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
 </div>
