--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -5,6 +5,6 @@
   </div>
   <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
-    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
