--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="editform-okcancel" style="margin-bottom: 10px">
           <button class="editform-okbutton" (click)="onUj()">Ok</button>
-          <button class="editform-cancelbutton" (click)="onMegsem()">Mégsem</button>
+          <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
         </div>
       </div>
     </div>
