--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -21,7 +21,7 @@
       <p>Ha új ügyféltér linket készít, a régi érvényessége megszűnik. Biztos benne?</p>
       <div class="editform-okcancel" style="margin-bottom: 10px">
         <button class="editform-okbutton" (click)="onUj()">Ok</button>
-        <button class="editform-cancelbutton" style="margin-left:3px;" (click)="onMegsem()">Mégsem</button>
+        <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
       </div>
     </div>
   </ng-container>
