--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -32,7 +32,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="doCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="doCancel()">Mégsem</button>
     </div>
   </form>
 
