--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -2,8 +2,8 @@
   <h5 *ngIf="uj">Új {{bizonylatLeiro.BizonylatNev | lowercase}}</h5>
   <h5 *ngIf="!uj">{{bizonylatLeiro.BizonylatNev}} módosítása</h5>
 
-  <div class="editform-box">
-    <div class="editform-row editform-row-block">
+  <div class="editform-card">
+    <div class="editform-row">
       <div class="editform-label">Ügyfél</div>
       <input type="text" class="editform-edit em30width" id="ugyfelnev"
              maxlength="200" required autocomplete="off" style="background-color: aquamarine"
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div class="editform-box">
+  <div class="editform-card">
     <div class="editform-row">
       <div class="editform-row-block">
         <div class="editform-label">Pénznem</div>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="editform-row editform-row-block">
+    <div class="editform-row">
       <div class="editform-label">Fizetési mód</div>
       <input type="text" class="editform-edit em10width" id="fizetesimod"
              maxlength="20" required autocomplete="off" style="background-color: aquamarine"
@@ -166,6 +166,6 @@
 
   <div class="editform-okcancel">
     <button class="editform-okbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="onSubmit()">Ok</button>
-    <button class="editform-cancelbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
