--- a/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
+++ b/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
@@ -18,7 +18,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Stop</button>
     </div>
   </form>
 </div>
