--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -4,18 +4,16 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
-      <div class="editform-row">
-        <div class="editform-label">Csoport</div>
-        <input type="text" class="editform-edit em10width" id="csoport1"
-               maxlength="30" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
-      </div>
+    <div class="editform-row">
+      <div class="editform-label">Csoport</div>
+      <input type="text" class="editform-edit em10width" id="csoport1"
+             maxlength="30" required autocomplete="off"
+             [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
     </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
