--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" type="submit" [disabled]="!form.valid">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="!form.valid">Ok</button>
     </div>
   </form>
 </div>
