--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="submit()">
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">A számlák kelte</div>
         <input type="date" class="editform-date em10width" id="szktol"
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">A számlák száma</div>
         <input type="text" class="editform-edit em10width" id="szsztol"
