--- a/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
+++ b/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
@@ -3,32 +3,30 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
-      <div class="editform-row">
-          <div class="editform-label">Bizonylatkép iratkód</div>
-          <input type="number" class="editform-edit em6width" id="m1"
-                 autocomplete="off"
-                 [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
-      </div>
+    <div class="editform-row">
+        <div class="editform-label">Bizonylatkép iratkód</div>
+        <input type="number" class="editform-edit em6width" id="m1"
+               autocomplete="off"
+               [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
+    </div>
 
-      <div class="editform-row">
-          <div class="editform-label">Eredeti példány</div>
-          <input type="number" class="editform-edit em6width" id="m2"
-                 autocomplete="off"
-                 [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
-      </div>
+    <div class="editform-row">
+        <div class="editform-label">Eredeti példány</div>
+        <input type="number" class="editform-edit em6width" id="m2"
+               autocomplete="off"
+               [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
+    </div>
 
-      <div class="editform-row">
-          <div class="editform-label">Másolatok</div>
-          <input type="number" class="editform-edit em6width" id="m3"
-                 autocomplete="off"
-                 [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
-      </div>
+    <div class="editform-row">
+        <div class="editform-label">Másolatok</div>
+        <input type="number" class="editform-edit em6width" id="m3"
+               autocomplete="off"
+               [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
     </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
