--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Név</div>
         <input type="text" class="editform-edit em15width" id="m1"
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Bankszámla 1</div>
         <input type="text" class="editform-edit em15width" id="m5"
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Adó törzsszám</div>
         <input type="text" class="editform-edit em10width" id="m7"
@@ -68,7 +68,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
 </div>
