--- a/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
+++ b/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
@@ -2,7 +2,7 @@
   <h5>Projekt iratminta</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Ajánlat iratkód</div>
           <input type="number" class="editform-edit em6width" id="m1"
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Szerződés iratkód</div>
           <input type="number" class="editform-edit em6width" id="m8"
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Munkalap iratkód</div>
           <input type="number" class="editform-edit em6width" id="m6"
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="editform-box">
+    <div class="editform-card">
       <div class="editform-row">
           <div class="editform-label">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
           <input type="number" class="editform-edit em6width" id="m4"
@@ -94,7 +94,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 
