--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -4,18 +4,16 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
-      <div class="editform-row">
-        <div class="editform-label">Irattipus</div>
-        <input type="text" class="editform-edit em15width" id="irattipus1"
-               maxlength="30" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
-      </div>
+    <div class="editform-row">
+      <div class="editform-label">Irattipus</div>
+      <input type="text" class="editform-edit em15width" id="irattipus1"
+             maxlength="30" required autocomplete="off"
+             [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
