--- a/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -4,18 +4,16 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
-      <div class="editform-row">
-        <div class="editform-label">Pénznem</div>
-        <input type="text" class="editform-edit em4width" id="penznem1"
-               maxlength="3" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Penznem1" name="penznem1">
-      </div>
+    <div class="editform-row">
+      <div class="editform-label">Pénznem</div>
+      <input type="text" class="editform-edit em4width" id="penznem1"
+             maxlength="3" required autocomplete="off"
+             [(ngModel)]="DtoEdited.Penznem1" name="penznem1">
     </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
