--- a/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
+++ b/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
@@ -4,18 +4,16 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-box">
-      <div class="editform-row">
-        <div class="editform-label">Tevékenység</div>
-        <input type="text" class="editform-combo em15width" id="kt"
-               maxlength="30" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Tevekenyseg1" name="kt">
-      </div>
+    <div class="editform-row">
+      <div class="editform-label">Tevékenység</div>
+      <input type="text" class="editform-combo em15width" id="kt"
+             maxlength="30" required autocomplete="off"
+             [(ngModel)]="DtoEdited.Tevekenyseg1" name="kt">
     </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
