--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
-    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
+    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
 
