--- a/src/app/tools/tetel-torles/tetel-torles.component.html
+++ b/src/app/tools/tetel-torles/tetel-torles.component.html
@@ -3,6 +3,6 @@
   <div class="editform-row">Biztosan törölni akarja ezt a tételt?</div>
   <div class="editform-okcancel">
     <button class="editform-okbutton" (click)="doOk()">Ok</button>
-    <button class="editform-cancelbutton" (click)="doCancel()">Mégsem</button>
+    <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
 </div>
