--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -18,7 +18,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
-      <button class="editform-cancelbutton" [disabled]="!f.valid" type="button" (click)="cancelClick()">Mégsem</button>
+      <button class="toolbutton" [disabled]="!f.valid" type="button" (click)="cancelClick()">Mégsem</button>
     </div>
   </form>
 </div>
