--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -4,17 +4,10 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
     <ng-container *ngIf="!kesz">
       <div class="editform-row">
-        <div>
-          <div class="editform-label">Új bizonylattipus</div>
-          <div *ngFor="let entry of entries; let i = index">
-            <input type="radio" name="radiogroup" id="entry"
-                   [checked]="i === entryindex"
-                   (change)="change(i)">
-            <label for="entry">
-              {{entry[0]}}
-            </label>
-          </div>
-        </div>
+        <div class="editform-label">Az új bizonylat tipusa</div>
+        <select type="text" class="editform-combo" name="statusz" [(ngModel)]="entryindex">
+          <option *ngFor="let s of bizonylatservice.tipusok; let i = index" [value]="i" [disabled]=s[2]>{{s[0]}}</option>
+        </select>
       </div>
 
       <div class="editform-okcancel">
@@ -24,7 +17,9 @@
     </ng-container>
 
     <ng-container *ngIf="kesz">
-      <div>Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}</div>
+      <div class="editform-row">
+        Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}
+      </div>
       <div class="editform-okcancel">
         <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       </div>
