--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
+      <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 </div>
