--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
@@ -4,7 +4,7 @@
     Biztosan törölni akarja erről a számláról a fuvardíjakat?
   </div>
   <div class="editform-okcancel">
-    <button class="editform-okbutton" (click)="doOk()">Ok</button>
+    <button class="toolbutton okbutton" (click)="doOk()">Ok</button>
     <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
 </div>
