--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -28,7 +28,7 @@
           Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?
         </div>
         <div class="editform-okcancel" style="margin-bottom: 10px">
-          <button class="editform-okbutton" (click)="onUj()">Ok</button>
+          <button class="toolbutton okbutton" (click)="onUj()">Ok</button>
           <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
         </div>
       </div>
