--- a/src/app/fotozas/fotozas/fotozas.component.html
+++ b/src/app/fotozas/fotozas/fotozas.component.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="editform-okcancel">
-        <button class="editform-okbutton" [disabled]="!f.valid || file === undefined" type="submit">Ok</button>
+        <button class="toolbutton okbutton" [disabled]="!f.valid || file === undefined" type="submit">Ok</button>
       </div>
     </form>
   </ng-container>
