--- a/src/app/tools/tetel-torles/tetel-torles.component.html
+++ b/src/app/tools/tetel-torles/tetel-torles.component.html
@@ -2,7 +2,7 @@
   <h5>{{cim}} törlése</h5>
   <div class="editform-row">Biztosan törölni akarja ezt a tételt?</div>
   <div class="editform-okcancel">
-    <button class="editform-okbutton" (click)="doOk()">Ok</button>
+    <button class="toolbutton okbutton" (click)="doOk()">Ok</button>
     <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
 </div>
