--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
+      <button class="toolbutton okbutton" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
       <button class="toolbutton" [disabled]="!f.valid" type="button" (click)="cancelClick()">Mégsem</button>
     </div>
   </form>
