--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="editform-okcancel">
-    <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
+    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 
