--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="editform-okcancel">
-        <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+        <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
         <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
       </div>
     </ng-container>
@@ -21,7 +21,7 @@
         Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}
       </div>
       <div class="editform-okcancel">
-        <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+        <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       </div>
     </ng-container>
   </form>
