--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -21,7 +21,7 @@
     </ng-container>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
 
