--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -4,7 +4,7 @@
     Biztosan stornozni akarja ezt a tételt?
   </div>
   <div class="editform-okcancel">
-    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
