--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -165,7 +165,7 @@
   </div>
 
   <div class="editform-okcancel">
-    <button class="editform-okbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="onSubmit()">Ok</button>
+    <button class="toolbutton okbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="onSubmit()">Ok</button>
     <button class="toolbutton" [disabled]="SzerkesztesMode !== 1" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
