--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
@@ -4,7 +4,7 @@
     Biztosan le akarja választani ezt az iratot a bizonylatról?
   </div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
-    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
