--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="file === undefined" type="submit">Ok</button>
+      <button class="toolbutton okbutton" [disabled]="file === undefined" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
