--- a/src/app/logon/jelszocsere/jelszocsere.component.html
+++ b/src/app/logon/jelszocsere/jelszocsere.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
