--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -4,7 +4,7 @@
     Biztosan le akarja választani ezt a tételt a projektről?
   </div>
   <div class="editform-okcancel">
-    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
