--- a/src/app/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
@@ -4,7 +4,7 @@
     <app-vagolap></app-vagolap>
   </div>
   <div class="editform-okcancel">
-    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
