--- a/src/app/riport/koveteles/koveteles.component.html
+++ b/src/app/riport/koveteles/koveteles.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
   </form>
