--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -20,7 +20,7 @@
       <h5>Új ügyféltér link</h5>
       <p>Ha új ügyféltér linket készít, a régi érvényessége megszűnik. Biztos benne?</p>
       <div class="editform-okcancel" style="margin-bottom: 10px">
-        <button class="editform-okbutton" (click)="onUj()">Ok</button>
+        <button class="toolbutton okbutton" (click)="onUj()">Ok</button>
         <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
       </div>
     </div>
